--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "yonyy.github.io",
+  "name": "brewkrew",
   "version": "1.0.0",
-  "description": "Enjoy",
+  "description": "Just a group of friends conquering San Diego one brewery at a time",
   "main": "index.js",
-  "repository": "https://github.com/yonyy/yonyy.github.io",
+  "repository": "https://github.com/yonyy/brewkrew",
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
