Break down npm scripts and update menu link

--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "eslint": "^4.19.1",
-    "express": "^4.16.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
@@ -28,8 +26,12 @@
     "parcel-bundler": "^1.9.3"
   },
   "scripts": {
-    "start": "rm -rf ./dist/* && cp -r src/images dist/ && parcel index.html -p 8080 --no-cache && cp -r src/images dist/",
-    "build": "rm -rf ./dist/* && cp -r src/images dist/ && parcel build index.html --out-dir dist/ --no-source-maps --no-cache",
-    "publish": "npm run build && aws s3 sync ./dist s3://brewkrew.io/ --exclude *.html --exclude '*.map' --cache-control 'max-age=31536000, private' && aws s3 sync ./dist s3://brewkrew.io/ --exclude *.js* --cache-control 'no-cache' --delete"
+    "copy-images" : "cp -r src/images dist/",
+    "clean" : "rm -rf ./dist/*",
+    "start": "npm run clean && npm run copy-images && parcel index.html -p 8080 --no-cache",
+    "build": "npm run clean && npm run copy-images && parcel build index.html --out-dir dist/ --no-source-maps --no-cache",
+    "sync": "npm run build && npm run syncAssets && npm run syncHTML",
+    "syncAssets" : "aws s3 sync ./dist s3://brewkrew.io/ --exclude *.html --exclude *.map --cache-control 'max-age=31536000, private'",
+    "syncHTML" : "aws s3 sync ./dist s3://brewkrew.io/ --exclude *.js.* --exclude *.css.* --cache-control 'no-cache' --delete"
   }
 }
