--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,10 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            "tab",
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
@@ -46,11 +49,5 @@
     },
     "globals": {
         "google": false
-    },
-    "overrides" : {
-        "files" : ["gulpfile.js", "index.js"],
-        "rules" : {
-            "no-console" : ["off"]
-        }
     }
 }
