--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "husky": "^1.3.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "sass": "^1.17.3"
+    "pretty-quick": "^1.10.0"
   },
   "scripts": {
     "copy-images": "cp -r src/images dist/",
