--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.8.6",
@@ -17,11 +17,12 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.13.0",
     "husky": "^1.3.1",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0"
+    "prettier": "^1.17.1",
+    "pretty-quick": "^1.10.0",
+    "sass": "^1.20.1"
   },
   "scripts": {
     "copy-images": "cp -r src/images dist/",
