--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sync": "npm run build && npm run syncAssets && npm run syncHTML",
     "syncAssets": "aws s3 sync ./dist s3://brewkrew.io/ --exclude *.html --cache-control 'max-age=31536000, public'",
     "syncHTML": "aws s3 sync ./dist s3://brewkrew.io/ --exclude *.js --exclude *.css --cache-control 'no-cache' --delete",
-    "pretty": "prettier --write '**/src/*.js'"
+    "pretty": "prettier --write '**/src/*.js'",
+    "test": "eslint ."
   },
   "husky": {
     "hooks": {
