--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,26 +5,34 @@ jobs:
 	build:
 		docker:
 			- image: circleci/node:11.11.0
+		steps:
+			- checkout
+			- run:
+					name: "Node version"
+					command: echo node -v
+			- run:
+					name: "NPM version"
+					command: echo npm -v
+			- run:
+					name: "Install dependencies"
+					command: npm install
+			- run:
+					name: "Build bundle"
+					command: parcel build index.html --out-dir dist/ --no-source-maps --detailed-report
+	test:
+		docker:
+			- image: circleci/node:11.11.0
+		steps:
+			- checkout
+			- run: npm test
+	deploy2s3:
+		docker:
 			- image: circleci/python:2.7
-		environment:
-			NODE_ENV: production
 		branches:
 			only:
 				- master
 		steps:
 			- checkout
-			- run:
-				name: "Node version"
-				command: echo node -v
-			- run:
-				name: "NPM version"
-				command: echo npm -v
-			- run:
-				name: "Install dependencies"
-				command: npm install
-			- run:
-				name: "Build bundle"
-				command: parcel build index.html --out-dir dist/ --no-source-maps --detailed-report
 			# Sync assests
 			- aws-s3/sync:
 				from: dist
@@ -40,7 +48,16 @@ jobs:
 				arguments: |
 					--exclude *.js \
 					--exclude *.css \
+					--exclude *.jpg \
 					--cache-control 'no-cache'
 				overwrite: true
+workflows:
+	build-test-deploy:
+		jobs:
+			- build
+			- test
+			- deploy2s3
+
+
  
  
