--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
 	aws-cli: circleci/aws-cli@0.1.13
-	aws-s3: circle/ci:aws-s3@1.0.0
+	aws-s3: circleci/aws-s3@1.0.9
 executors:
 	node:
 		docker:
@@ -26,12 +26,12 @@ jobs:
 			- checkout
 			- run: npm test
 	deploy2s3:
-    executor: aws-cli/default
+		executor: aws-cli/default
 		steps:
 			- checkout
-      - aws-cli/install
-      - aws-cli/configure:
-          profile-name: circleci
+			- aws-cli/install
+			- aws-cli/configure:
+					profile-name: circleci
 			- run:
 					name: "Build bundle"
 					command: parcel build index.html --out-dir dist/ --no-source-maps --detailed-report
@@ -67,7 +67,3 @@ workflows:
 					requires:
 						- setup
 						- test
-
-
- 
- 
