--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,16 @@ jobs:
       - checkout
       - run:
           name: "Node version"
-          command: echo node -v
+          command: node -v
       - run:
           name: "NPM version"
-          command: echo npm -v
+          command: npm -v
       - run:
           name: "Install dependencies"
-          command: npm install
+          command: |
+            npm install \
+            npm install -g parcel-bundler@^1.12.3 \
+            npm install -g eslint@^4.19.1
   test:
     executor: node
     steps:
