--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           name: "Install dependencies"
           command: |
             npm install \
-            alias eslint=./node_modules/.bin/eslint
+            alias eslint=./node_modules/.bin/eslint \
             alias parcel=./node_modules/.bin/parcel
   test:
     executor: node
