--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           key: npm-dependency-cache-{{ checksum "package.json" }}
       - run:
           name: "Eslint"
-          command: ./node_modules/.bin/eslint .
+          command: npm run test
   deploy2s3:
     executor: aws-cli/default
     steps:
@@ -46,7 +46,7 @@ jobs:
           key: npm-dependency-cache-{{ checksum "package.json" }}
       - run:
           name: "Build bundle"
-          command: ./node_modules/.bin/parcel build index.html --out-dir dist/ --no-source-maps --detailed-report
+          command: npm run build
       # Sync assests
       - aws-s3/sync:
           from: dist
