--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
   deploy2s3:
     docker:
       - image: circleci/python:2.7
+      - image: circleci/node:11.10.1
     steps:
       - checkout
       - restore_cache: # special step to restore the dependency cache
