Manually install pip (#7)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,12 @@ version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.9
 executors:
-  node-python:
+  node:
     docker:
       - image: circleci/node:11.10.1
-        name: node
-      - image: circleci/python:2.7
-        name: python
 jobs:
   setup:
-    executor: node-python
+    executor: node
     steps:
       - checkout
       - run:
@@ -29,7 +26,7 @@ jobs:
           paths:
             - ./node_modules
   test:
-    executor: node-python
+    executor: node
     steps:
       - checkout
       - restore_cache: # special step to restore the dependency cache
@@ -38,9 +35,12 @@ jobs:
           name: "Eslint"
           command: npm run test
   deploy2s3:
-    executor: node-python
+    executor: node
     steps:
       - checkout
+      - run:
+          name: "Install pip"
+          command: sudo apt-get update && sudo apt install python-pip && pip -V
       - restore_cache: # special step to restore the dependency cache
           key: npm-dependency-cache-{{ checksum "package.json" }}
       - run:
