--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           to: s3://brewkrew.io
           arguments: |
             --exclude *.html \
-            --cache-control 'max-age=31536000, public'
+            --cache-control 'max-age=31536000, public' \
           overwrite: true
       # Sync html
       - aws-s3/sync:
@@ -62,7 +62,7 @@ jobs:
             --exclude *.js \
             --exclude *.css \
             --exclude *.jpg \
-            --cache-control 'no-cache'
+            --cache-control 'no-cache' \
           overwrite: true
 workflows:
   build-test-deploy:
