--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@parcel/transformer-sass": "^2.5.0",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "parcel": "^2.0.0",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
@@ -29,11 +29,7 @@
     "start": "npm run prebuild && parcel index.html -p 8080 --open",
     "build": "npm run prebuild && parcel build index.html --dist-dir dist/ --no-source-maps --detailed-report",
     "pretty": "prettier --write '**/src/*.js'",
-    "test": "eslint ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern '**/*.js'"
-    }
+    "test": "eslint .",
+    "prepare": "husky install"
   }
 }
