--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "brewkrew",
   "version": "1.0.0",
   "description": "Just a group of friends conquering San Diego one brewery at a time",
-  "main": "index.html",
   "repository": "https://github.com/yonyy/brewkrew",
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.5.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.6.1",
     "react": "^16.12.0",
@@ -16,24 +15,21 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-plugin-react": "^7.17.0",
-    "husky": "^3.1.0",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
-    "sass": "^1.23.7"
+    "@parcel/transformer-sass": "^2.5.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-react": "^7.29.4",
+    "husky": "^8.0.0",
+    "parcel": "^2.0.0",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
+    "sass": "^1.51.0"
   },
   "scripts": {
     "prebuild": "rm -rf ./dist/*",
     "start": "npm run prebuild && parcel index.html -p 8080 --open",
-    "build": "npm run prebuild && parcel build index.html --out-dir dist/ --no-source-maps --detailed-report",
+    "build": "npm run prebuild && parcel build index.html --dist-dir dist/ --no-source-maps --detailed-report",
     "pretty": "prettier --write '**/src/*.js'",
-    "test": "eslint ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern '**/*.js'"
-    }
+    "test": "eslint .",
+    "prepare": "husky install"
   }
 }
