--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 orbs:
-  aws-s3: circleci/aws-s3@1.0.9
+  aws-s3: circleci/aws-s3@3.0
 executors:
   node:
     docker:
-      - image: cimg/node:16.15.0
+      - image: cimg/python:3.10.4-node
 jobs:
   setup:
     executor: node
@@ -38,12 +38,8 @@ jobs:
     executor: node
     steps:
       - checkout
-      - run:
-          name: "Install pip"
-          command: sudo apt-get update && sudo apt install python3-pip && pip -V
       - restore_cache: # special step to restore the dependency cache
           key: npm-dependency-cache-{{ checksum "package.json" }}
-      - run:
           name: "Build bundle"
           command: npm run build
       # Sync assests
@@ -53,7 +49,6 @@ jobs:
           arguments: |
             --exclude *.html \
             --cache-control 'max-age=31536000, public' \
-          overwrite: true
       # Sync html
       - aws-s3/sync:
           from: dist
@@ -63,7 +58,6 @@ jobs:
             --exclude *.css \
             --exclude *.jpg \
             --cache-control 'no-cache' \
-          overwrite: true
 workflows:
   build-test-deploy:
     jobs:
