--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,7 @@ jobs:
       - restore_cache: # special step to restore the dependency cache
           key: npm-dependency-cache-{{ checksum "package.json" }}
           name: "Build bundle"
-          command: npm run build && ls
-      - persist_to_workspace:
-          root: .
-          paths:
-            - dist
+          command: npm run build
       # Sync assests
       - aws-s3/sync:
           from: dist
