--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ executors:
   node:
     docker:
       - image: cimg/python:3.10.4-node
+    working_directory: /tmp
 jobs:
   setup:
     executor: node
@@ -34,7 +35,7 @@ jobs:
       - run:
           name: "Eslint"
           command: npm run test
-  deploy2s3:
+  build:
     executor: node
     steps:
       - checkout
@@ -42,6 +43,15 @@ jobs:
           key: npm-dependency-cache-{{ checksum "package.json" }}
           name: "Build bundle"
           command: npm run build
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - dist
+  deploy2s3:
+    executor: node
+    steps:
+      - attach_workspace:
+        at: /temp
       # Sync assests
       - aws-s3/sync:
           from: dist
@@ -67,9 +77,12 @@ workflows:
       - test:
           requires:
             - setup
+      - build:
+          requires:
+            - test
       - deploy2s3:
           filters:
             branches:
               only: master
           requires:
-            - test
+            - build
